[gd_scene load_steps=30 format=3 uid="uid://dakqrgxef16qq"]

[ext_resource type="Script" path="res://UI/module_menus.gd" id="1_pge6p"]
[ext_resource type="Texture2D" uid="uid://qfbms1tu01rg" path="res://Assets/UI/Station Menus.png" id="2_qcbua"]
[ext_resource type="Texture2D" uid="uid://4o7gvibxs1yh" path="res://Assets/UI/Green-Frame.png" id="3_6t134"]
[ext_resource type="FontFile" uid="uid://c1rx8lmdovuo4" path="res://Assets/Fonts/VT323-Regular.ttf" id="5_5l1ay"]
[ext_resource type="Texture2D" uid="uid://cgd77evvex27a" path="res://Assets/UI/Menu-Button.png" id="6_sbm5o"]
[ext_resource type="Texture2D" uid="uid://b7ue85373ij7v" path="res://Assets/Station Parts/Probe.png" id="6_syijb"]
[ext_resource type="Script" path="res://Global/menu_button.gd" id="7_8yd37"]
[ext_resource type="LabelSettings" uid="uid://dgri43qjj5xtv" path="res://Assets/Fonts/game_titles.tres" id="8_qa806"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0dd8a"]
atlas = ExtResource("2_qcbua")
region = Rect2(5, 299, 1286, 284)

[sub_resource type="LabelSettings" id="LabelSettings_xhvgp"]
font = ExtResource("5_5l1ay")
font_size = 48
font_color = Color(0, 1, 0.313726, 1)

[sub_resource type="LabelSettings" id="LabelSettings_t1ehc"]
line_spacing = 6.0
font = ExtResource("5_5l1ay")
font_size = 28
font_color = Color(0, 1, 0.313726, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_4wx7q"]

[sub_resource type="LabelSettings" id="LabelSettings_78ung"]
font = ExtResource("5_5l1ay")
font_size = 42
font_color = Color(0, 1, 0.313726, 1)

[sub_resource type="LabelSettings" id="LabelSettings_niqm4"]
font = ExtResource("5_5l1ay")
font_size = 28
font_color = Color(0, 1, 0.313726, 1)

[sub_resource type="LabelSettings" id="LabelSettings_r1xcj"]
font = ExtResource("5_5l1ay")
font_size = 42
font_color = Color(0, 1, 0.313726, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouy8d"]
atlas = ExtResource("6_syijb")
region = Rect2(0, 0, 42, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_arc4h"]
atlas = ExtResource("6_syijb")
region = Rect2(42, 0, 42, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s7xt"]
atlas = ExtResource("6_syijb")
region = Rect2(84, 0, 42, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn7va"]
atlas = ExtResource("6_syijb")
region = Rect2(126, 0, 42, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_fbbqa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouy8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arc4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s7xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn7va")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_lw8bi"]
font = ExtResource("5_5l1ay")
font_size = 26
font_color = Color(0, 1, 0.313726, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ltucp"]
font = ExtResource("5_5l1ay")
font_size = 24
font_color = Color(0, 1, 0.313726, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8buo"]
atlas = ExtResource("6_sbm5o")
region = Rect2(5, 5, 200, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow8hr"]
atlas = ExtResource("6_sbm5o")
region = Rect2(215, 5, 200, 50)

[sub_resource type="LabelSettings" id="LabelSettings_4jop5"]
font = ExtResource("5_5l1ay")
font_size = 38
font_color = Color(0, 1, 0.313726, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_772oh"]
atlas = ExtResource("6_sbm5o")
region = Rect2(5, 5, 200, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_kaiuq"]
atlas = ExtResource("6_sbm5o")
region = Rect2(215, 5, 200, 50)

[sub_resource type="LabelSettings" id="LabelSettings_n8e1s"]
font = ExtResource("5_5l1ay")
font_size = 38
font_color = Color(0, 1, 0.313726, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6camc"]
font = ExtResource("5_5l1ay")
font_size = 80
font_color = Color(0, 0.337255, 0.105882, 1)

[node name="Module Menus" type="Node2D"]
script = ExtResource("1_pge6p")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(643, 142)
texture = SubResource("AtlasTexture_0dd8a")

[node name="General" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0

[node name="Title" type="Label" parent="General"]
layout_mode = 0
offset_left = 35.0
offset_top = 35.0
offset_right = 581.0
offset_bottom = 84.0
text = "Module: Module Name"
label_settings = SubResource("LabelSettings_xhvgp")
vertical_alignment = 1

[node name="Description" type="Label" parent="General"]
layout_mode = 0
offset_left = 36.0
offset_top = 92.0
offset_right = 590.0
offset_bottom = 248.0
text = "//Module Description
//Module Hull
//Energy Consumption"
label_settings = SubResource("LabelSettings_t1ehc")
vertical_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="Special Settings" type="Sprite2D" parent="General"]
position = Vector2(795, 143)
scale = Vector2(1.69298, 1)
texture = ExtResource("3_6t134")

[node name="Icon Box" type="Sprite2D" parent="General"]
position = Vector2(1131, 143)
texture = ExtResource("3_6t134")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="General/Icon Box"]
offset_left = -104.0
offset_top = -104.0
offset_right = 104.0
offset_bottom = 104.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="General/Icon Box/AspectRatioContainer"]
position = Vector2(103, 105)
scale = Vector2(0.9, 0.9)
sprite_frames = SubResource("SpriteFrames_4wx7q")

[node name="Atmosphere Generator" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Battery" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 619.0
offset_top = 39.0
offset_right = 971.0
offset_bottom = 247.0

[node name="Status" type="Label" parent="Battery"]
layout_mode = 0
offset_right = 352.0
offset_bottom = 49.0
text = "Status - Empty"
label_settings = SubResource("LabelSettings_78ung")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Info" type="Label" parent="Battery"]
layout_mode = 0
offset_left = 16.0
offset_top = 45.0
offset_right = 336.0
offset_bottom = 205.0
text = "//Battery Storage In Use:
//0%
//currenty duplicating maximum energy reserves"
label_settings = SubResource("LabelSettings_niqm4")
vertical_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="Water Module" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Biosphere" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Materials" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Observation" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Probe Station" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Probe Status" type="Label" parent="Probe Station"]
layout_mode = 0
offset_left = 619.0
offset_top = 39.0
offset_right = 971.0
offset_bottom = 87.0
text = "Status - Active"
label_settings = SubResource("LabelSettings_r1xcj")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Probe Station"]
position = Vector2(1130, 115)
scale = Vector2(1.8, 1.8)
sprite_frames = SubResource("SpriteFrames_fbbqa")
autoplay = "default"
frame = 2
frame_progress = 0.707934

[node name="Probe Description" type="Label" parent="Probe Station"]
layout_mode = 0
offset_left = 636.0
offset_top = 88.0
offset_right = 956.0
offset_bottom = 206.0
text = "//Probe Ready For Deployment

//SYStem SCAN Ready"
label_settings = SubResource("LabelSettings_lw8bi")
vertical_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="Probe Data" type="Label" parent="Probe Station"]
layout_mode = 0
offset_left = 638.0
offset_top = 80.0
offset_right = 963.0
offset_bottom = 209.0
text = "//Food:
//Water:
//O2:
//Metal:"
label_settings = SubResource("LabelSettings_ltucp")
vertical_alignment = 1
uppercase = true

[node name="Scan Button" type="TextureButton" parent="Probe Station" node_paths=PackedStringArray("button_label")]
layout_mode = 0
offset_left = 730.0
offset_top = 210.0
offset_right = 930.0
offset_bottom = 260.0
scale = Vector2(0.7, 0.7)
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_v8buo")
texture_hover = SubResource("AtlasTexture_ow8hr")
script = ExtResource("7_8yd37")
button_text = "Scan"
button_label = NodePath("Label")

[node name="Label" type="Label" parent="Probe Station/Scan Button"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 46.0
text = "Text"
label_settings = SubResource("LabelSettings_4jop5")
horizontal_alignment = 1

[node name="Propulsor" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 619.0
offset_top = 39.0
offset_right = 971.0
offset_bottom = 247.0

[node name="Propulsor Status" type="Label" parent="Propulsor"]
layout_mode = 0
offset_right = 352.0
offset_bottom = 48.0
text = "System jump"
label_settings = SubResource("LabelSettings_r1xcj")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Actions Container" type="VBoxContainer" parent="Propulsor"]
layout_mode = 0
offset_top = 52.0
offset_right = 352.0
offset_bottom = 208.0
alignment = 1

[node name="HSplitContainer" type="HBoxContainer" parent="Propulsor/Actions Container"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Propulsor/Actions Container/HSplitContainer"]
layout_mode = 2

[node name="Next Label" type="Label" parent="Propulsor/Actions Container/HSplitContainer/CenterContainer"]
layout_mode = 2
text = "next system "
label_settings = ExtResource("8_qa806")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="CenterContainer2" type="CenterContainer" parent="Propulsor/Actions Container/HSplitContainer"]
layout_mode = 2

[node name="Next Button" type="TextureButton" parent="Propulsor/Actions Container/HSplitContainer/CenterContainer2" node_paths=PackedStringArray("button_label")]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_772oh")
texture_hover = SubResource("AtlasTexture_kaiuq")
script = ExtResource("7_8yd37")
button_text = "Energy 25%"
button_label = NodePath("Label")

[node name="Label" type="Label" parent="Propulsor/Actions Container/HSplitContainer/CenterContainer2/Next Button"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 46.0
text = "Text"
label_settings = SubResource("LabelSettings_n8e1s")
horizontal_alignment = 1

[node name="HSplitContainer2" type="HBoxContainer" parent="Propulsor/Actions Container"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Propulsor/Actions Container/HSplitContainer2"]
layout_mode = 2

[node name="Skip Label" type="Label" parent="Propulsor/Actions Container/HSplitContainer2/CenterContainer"]
layout_mode = 2
text = "skip system "
label_settings = ExtResource("8_qa806")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="CenterContainer2" type="CenterContainer" parent="Propulsor/Actions Container/HSplitContainer2"]
layout_mode = 2

[node name="Skip Button" type="TextureButton" parent="Propulsor/Actions Container/HSplitContainer2/CenterContainer2" node_paths=PackedStringArray("button_label")]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_772oh")
texture_hover = SubResource("AtlasTexture_kaiuq")
script = ExtResource("7_8yd37")
button_text = "Energy 50%"
button_label = NodePath("../../../HSplitContainer/CenterContainer2/Next Button/Label")

[node name="Label" type="Label" parent="Propulsor/Actions Container/HSplitContainer2/CenterContainer2/Skip Button"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 46.0
text = "Text"
label_settings = SubResource("LabelSettings_n8e1s")
horizontal_alignment = 1

[node name="Reactor" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 619.0
offset_top = 39.0
offset_right = 971.0
offset_bottom = 247.0

[node name="Status" type="Label" parent="Reactor"]
layout_mode = 1
offset_right = 352.0
offset_bottom = 49.0
text = "Status - Active"
label_settings = SubResource("LabelSettings_78ung")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Info" type="Label" parent="Reactor"]
layout_mode = 0
offset_left = 13.0
offset_top = 48.0
offset_right = 339.0
offset_bottom = 208.0
text = "//Reactor operating at full capacity
//warning: reactor shutdown may damage station
"
label_settings = SubResource("LabelSettings_niqm4")
vertical_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="Ring" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Solar Panel - Upper Deck" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 619.0
offset_top = 39.0
offset_right = 971.0
offset_bottom = 247.0

[node name="Status" type="Label" parent="Solar Panel - Upper Deck"]
layout_mode = 0
offset_right = 352.0
offset_bottom = 48.0
text = "Status - Active"
label_settings = SubResource("LabelSettings_r1xcj")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Info" type="Label" parent="Solar Panel - Upper Deck"]
layout_mode = 1
offset_left = 13.0
offset_top = 48.0
offset_right = 333.0
offset_bottom = 208.0
text = "//System Star Category:
//Yellow
//Solar Energy Efficiency:
//100%"
label_settings = SubResource("LabelSettings_niqm4")
vertical_alignment = 1
uppercase = true

[node name="Solar Panel - Lower Deck" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 619.0
offset_top = 39.0
offset_right = 971.0
offset_bottom = 247.0

[node name="Status" type="Label" parent="Solar Panel - Lower Deck"]
layout_mode = 0
offset_right = 352.0
offset_bottom = 48.0
text = "Status - Active"
label_settings = SubResource("LabelSettings_r1xcj")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Info" type="Label" parent="Solar Panel - Lower Deck"]
layout_mode = 0
offset_left = 13.0
offset_top = 48.0
offset_right = 341.0
offset_bottom = 208.0
text = "//System Star Category:
//Yellow
//Solar Energy Efficiency:
//100%"
label_settings = SubResource("LabelSettings_niqm4")
vertical_alignment = 1
uppercase = true

[node name="No Module" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="No Module"]
layout_mode = 1
offset_left = 20.0
offset_top = 19.0
offset_right = 1266.0
offset_bottom = 266.0
text = "//No Module Selected"
label_settings = SubResource("LabelSettings_6camc")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="pressed" from="Probe Station/Scan Button" to="." method="_on_scan_button_pressed"]
[connection signal="pressed" from="Propulsor/Actions Container/HSplitContainer/CenterContainer2/Next Button" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Propulsor/Actions Container/HSplitContainer2/CenterContainer2/Skip Button" to="." method="_on_skip_button_pressed"]
